fix BATCH_STEP_EXECUTION DDL

--- a/spring-batch-docs/src/main/asciidoc/schema-appendix.adoc
+++ b/spring-batch-docs/src/main/asciidoc/schema-appendix.adoc
@@ -224,11 +224,12 @@ listing shows the definition of the `BATCH_STEP_EXECUTION` table:
 [source, sql]
 ----
 CREATE TABLE BATCH_STEP_EXECUTION  (
-  STEP_EXECUTION_ID BIGINT  PRIMARY KEY ,
+  STEP_EXECUTION_ID BIGINT  NOT NULL PRIMARY KEY ,
   VERSION BIGINT NOT NULL,
   STEP_NAME VARCHAR(100) NOT NULL,
   JOB_EXECUTION_ID BIGINT NOT NULL,
-  START_TIME TIMESTAMP NOT NULL ,
+  CREATE_TIME DATETIME(6) NOT NULL,
+  START_TIME DATETIME(6) DEFAULT NULL ,
   END_TIME TIMESTAMP DEFAULT NULL,
   STATUS VARCHAR(10),
   COMMIT_COUNT BIGINT ,
@@ -241,7 +242,7 @@ CREATE TABLE BATCH_STEP_EXECUTION  (
   ROLLBACK_COUNT BIGINT ,
   EXIT_CODE VARCHAR(20) ,
   EXIT_MESSAGE VARCHAR(2500) ,
-  LAST_UPDATED TIMESTAMP,
+  LAST_UPDATED DATETIME(6),
   constraint JOB_EXECUTION_STEP_FK foreign key (JOB_EXECUTION_ID)
   references BATCH_JOB_EXECUTION(JOB_EXECUTION_ID)
 ) ;
