Fix BATCH_STEP_EXECUTION DDL in schema appendix
Issue #4356

--- a/spring-batch-docs/src/main/asciidoc/schema-appendix.adoc
+++ b/spring-batch-docs/src/main/asciidoc/schema-appendix.adoc
@@ -224,11 +224,12 @@ listing shows the definition of the `BATCH_STEP_EXECUTION` table:
 [source, sql]
 ----
 CREATE TABLE BATCH_STEP_EXECUTION  (
-  STEP_EXECUTION_ID BIGINT  PRIMARY KEY ,
+  STEP_EXECUTION_ID BIGINT NOT NULL PRIMARY KEY ,
   VERSION BIGINT NOT NULL,
   STEP_NAME VARCHAR(100) NOT NULL,
   JOB_EXECUTION_ID BIGINT NOT NULL,
-  START_TIME TIMESTAMP NOT NULL ,
+  CREATE_TIME TIMESTAMP NOT NULL,
+  START_TIME TIMESTAMP DEFAULT NULL ,
   END_TIME TIMESTAMP DEFAULT NULL,
   STATUS VARCHAR(10),
   COMMIT_COUNT BIGINT ,
