--- a/spring-batch-docs/modules/ROOT/pages/index.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/index.adoc
@@ -1,4 +1,4 @@
-
+= Overview
 
 // ======================================================================================
 
@@ -30,6 +30,7 @@ xref:spring-batch-integration.adoc[Spring Batch Integration] :: Integration
 between Spring Batch and Spring Integration projects.
 xref:monitoring-and-metrics.adoc[Monitoring and metrics] :: Batch jobs
 monitoring and metrics.
+xref:tracing.adoc[Tracing] :: Tracing with Micrometer.
 
 The following appendices are available:
 
