--- a/spring-batch-docs/modules/ROOT/nav.adoc
+++ b/spring-batch-docs/modules/ROOT/nav.adoc
@@ -1,11 +1,8 @@
 * xref:index.adoc[]
-* xref:attributes.adoc[]
-** xref:header/index-header.adoc[]
 * xref:spring-batch-intro.adoc[]
 * xref:spring-batch-architecture.adoc[]
 * xref:whatsnew.adoc[]
 * xref:domain.adoc[]
-* xref:toggle.adoc[]
 * xref:job.adoc[]
 ** xref:job/configuring.adoc[]
 ** xref:job/java-config.adoc[]
@@ -57,9 +54,9 @@
 ** xref:spring-batch-integration/available-attributes-of-the-job-launching-gateway.adoc[]
 ** xref:spring-batch-integration/sub-elements.adoc[]
 * xref:monitoring-and-metrics.adoc[]
-* xref:appendix.adoc[]
-* xref:schema-appendix.adoc[]
-* xref:transaction-appendix.adoc[]
-* xref:glossary.adoc[]
-** xref:footer/index-footer.adoc[]
-* xref:index-single.adoc[]
+* xref:tracing.adoc[]
+* Appendices
+** xref:appendix.adoc[]
+** xref:schema-appendix.adoc[]
+** xref:transaction-appendix.adoc[]
+** xref:glossary.adoc[]
